add a few images, to illustrate the paper
darcs-hash:20070703140234-2fc9d-ba80dd3cb0c7125057a6f4d80f77232b89222323.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -37,7 +37,7 @@ colorlinks,linkcolor={blue},citecolor={blue},urlcolor={blue},
 
 % Increment the release number whenever significant changes are made.
 % The author and/or editor can define 'significant' however they like.
-\release{0.00}
+% \release{0.00}
 
 % At minimum, give your name and an email address.  You can include a
 % snail-mail address if you like.
@@ -202,6 +202,21 @@ performance issues are not yet clear. The method employs histograms
 and therefore needs more complex data structures when applied to
 higher precision data, potentially reducing any speed advantage.
 
+\begin{figure}[htbp]
+\begin{center}
+\subfigure[Input]{\includegraphics[scale=1.88]{CellsFluorescence2}}
+\subfigure[Dilation]{\includegraphics[scale=0.45]{dilate2D-std}}
+\subfigure[Erosion]{\includegraphics[scale=0.45]{erode2D-std}}
+\subfigure[Opening]{\includegraphics[scale=0.45]{open2D-std}}
+\subfigure[Closing]{\includegraphics[scale=0.45]{close2D-std}}
+\subfigure[White top-hat]{\includegraphics[scale=0.45]{whiteTopHat2D-std}}
+% \subfigure[Gradient]{\includegraphics[scale=0.5]{gradient2D-std}}
+\caption{Effect of a dilation (b), an erosion (c), an opening (d),
+a closing (e) and a white top hat (f) with a ball structuring element.}
+\end{center}
+\end{figure}
+
+
 \section{Rank filters}
 \label{sect:rank}
 Efficient implementations of median and rank filters can be carried out
@@ -304,9 +319,21 @@ This approach to convolution has been used recently in face detection
 applications \cite{Viola2004}, where rectangular filters of many
 different sizes and shapes were needed and could be computed from the same accumulation image.
 
+\begin{figure}[htbp]
+\begin{center}
+\subfigure[Input]{\includegraphics[scale=0.6]{cthead1}}
+\subfigure[Mean]{\includegraphics[scale=0.6]{test}}
+\subfigure[Sigma]{\includegraphics[scale=0.6]{sigma}}
+\caption{A mean transform (b) and a standard deviation transform (c) with a kernel of radius 3.}
+\end{center}
+\end{figure}
+
+
 \section{ITK implementation}
 The filters discusses in this article are contained in 3 packages --
-{\em consolidatedMorphology}, {\em fastRankMean} and {\em
+{\em consolidatedMorphology}\footnote{An earlier version of the {\em consolidatedMorphology} package has
+been submitted to the InsightJournal. However many improvements and
+bug fixes have been included since then.}, {\em fastRankMean} and {\em
 boxConvolution}. The most recent versions of these packages can be
 obtained from \url{http://voxel.jouy.inra.fr/darcsweb/}\footnote{
 The most recent versions can be obtained using darcs \cite{DarcsWebSite}
@@ -320,9 +347,7 @@ other kernel filters, requiring either a radius or a neighborhood to
 be specified.
 
 \subsection{Morphology filters -- consolidatedMorphology}
-An earlier version of the {\em consolidatedMorphology} package has
-been submitted to the InsightJournal. However many improvements and
-bug fixes have been included since then.
+
 
 The morphology filters utilize a new class -- {\em
 FlatStructuringElement} to describe, arbitary and decomposable
@@ -345,7 +370,7 @@ to be considered as the foreground value in the image. This value defaults to
 
 The algorithm used by a filter is set by the {\em SetAlgorithm}
 method, with options of {\em BASIC}, {\em HISTO}, {\em VHGW} and {\em
-ANCHOR} for the traditional ITK implementation, the moving histogram
+ANCHOR}, for the traditional ITK implementation, the moving histogram
 algorithm, the van Herk, Gil, Werman algorithm and the anchor
 algorithm respectively. The VHGW and ANCHOR algorithms can only be
 used for Box and Poly structuring elements. VHGW is more thoroughly
@@ -436,7 +461,8 @@ Results are reported in Tables \ref{tab:perfDilation}, \ref{tab:perfOpening}, \r
 
 \subsection{Rank and Mean filters}
 Relative times for sliding window median and mean filters and
-separable median filters are shown in Table \ref{tab:perfRank}. The
+separable median filters are shown in Tables \ref{tab:perfRankMean}
+and \ref{tab:perfRankMedian} and in Figure \ref{fig:perfRank}. The
 predicted linear complexity is observed for the sliding window
 approaches (complexity of direct approach is $O(n^2)$ in 2D, reduced
 to $O(n)$ by using the sliding window. The separable median exhibits a
@@ -446,7 +472,8 @@ runtime independent of kernel size, as expected.
 \begin{center}
 \subfigure[Mean]{\includegraphics[scale=0.62]{fastRankMean-perfMean}}
 \subfigure[Median]{\includegraphics[scale=0.62]{fastRankMean-perfMedian}}
-\caption{TODO}
+\caption{Execution times for several algorithms of mean filters (a) and
+median filters (b).\label{fig:perfRank}}
 \end{center}
 \end{figure}
 
