missing table reference
darcs-hash:20070703140948-2fc9d-5b0237a5b52710a1fe406aad0b5b35424ad73650.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -495,7 +495,7 @@ A good threading support is observed for all the implementations, as shown in Ta
 \subfigure[Threads]{\includegraphics[scale=0.62]{boxConvolution-perf_threads-large}}
 \caption{Execution times for and increasing kernel size (a), and an increasing number of threads (b).
 \label{fig:perfBoxConv}
-Results are reported in Table \ref{tab:perfBoxConv}}
+Results are reported in Tables \ref{tab:perfBoxConv} and  \ref{tab:perfBoxConv-threads}}
 \end{center}
 \end{figure}
 
