moved appendix to end and added title
darcs-hash:20070704063514-fafb9-445848776be88cfb82ca616a723e9b5418ef257f.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -580,7 +580,13 @@ We are grateful to the INRA MIGALE bioinformatics platform
 (\url{http://migale.jouy.inra.fr}) for providing the computational resources
 used for the timing tests.
 
+
+\bibliographystyle{plain}
+\bibliography{InsightJournal,local}
+\nocite{ITKSoftwareGuide}
+
 \appendix
+\section*{Appendix}
 
 \begin{table}[phtb]
 \centering
@@ -813,10 +819,6 @@ Size  &  Direct Mean &  Box Mean & Direct sigma & Box sigma\\
 \end{table}
 
 
-
-\bibliographystyle{plain}
-\bibliography{InsightJournal,local}
-\nocite{ITKSoftwareGuide}
 
 \end{document}
 
