force paper to be a4, so the figures should fit the page even when the article is built by Richard
darcs-hash:20070809074854-2fc9d-4d7eacc1b329c42b7e982733ade5b524e7aff010.gz

--- a/article/Article.tex
+++ b/article/Article.tex
@@ -6,7 +6,7 @@
 %
 %     http://www.itk.org/
 
-\documentclass{InsightArticle}
+\documentclass[a4paper]{InsightArticle}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
